Added support for TOC and Content separately

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -2,10 +2,14 @@
 <form class="form-horizontal" method="post">
 <ul class="breadcrumb">
     <li><a href="../admin">Admin</a> <span class="divider">></span></li>
-    <li><a href="../view/[% title %]">[% title %]</a></li>
+    <li><a href="../view/[% filename %]">[% title %]</a></li>
 </ul>
 </div><div class="span8">
-<textarea name="content" rows="10" style="width:600px">[% file %]</textarea>
+<h1>Table of Contents:</h1>
+<textarea name="toc" rows="10" style="width:600px">[% toc %]</textarea>
+<p><p>
+<h1>Contents:</h1>
+<textarea name="content" rows="10" style="width:600px">[% content %]</textarea>
 <p><p>
 <button type="submit" class="btn btn-primary">Save</button> 
 <a href="delete/[% title %]" class="btn btn-small btn-danger">Delete</a>
@@ -15,7 +19,7 @@
 <div class="span4">
 <div class="well">
 <strong>[% title %]</strong><br>
-<span class="label label-info">txt url</span> [% txturl %]<br>
+<span class="label label-info">txt url</span> [% txturl %] <a href="import/[% title %]">Import</a><br>
 <span class="label label-info">pdf url</span> [% pdfurl %]<br>
 <span class="label label-info">code type</span> [% codetype %]<br>
 <span class="label label-info">location</span> [% location %]<br>
