--- a/views/view.tt
+++ b/views/view.tt
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="span4" style="height:100%; overflow:auto;">
+    <div class="span4" style="height:100%;">
 [% toc %]
     </div>
-    <div class="span8" data-spy="scroll" style="height:100%; overflow:auto;">
+    <div class="span8" data-spy="scroll" style="height:450px; overflow:scroll;">
 [% content %]
     </div>
 </div>
