--- a/static/css/buildingcode.css
+++ b/static/css/buildingcode.css
@@ -1,62 +1,30 @@
-DIV.chapter h1
-{
-    font-family:"Helvetica";
-    text-align:center;
-    font-weight: bold;
-    font-size:16px;
+.sidebar-nav-fixed { position:fixed; padding:9px 0; top:60px; left:20px; width:250px; }
+.row-fluid > .span-fixed-sidebar { margin-left:290px; }
+.searchtitle { font-size:28px; }
+
+h1:before,h3:before,p:before { display:block; content:""; height:80px; margin:-80px 0 0; }
+DIV.chapter h1 { font-family:"Helvetica"; text-align:center; font-weight: bold; font-size:16px; }
+DIV.section h2 { margin-top:30px; text-align:center; font-family:"Helvetica"; font-size:14px; font-weight: bold; }
+DIV.subsection h3 { font-size:12px; font-weight: bold; }
+.title { font-weight:bold; }
+DIV.chapter { width:360px; }
+.california,.washington,.oregon { display:none; }
+.index-header h1 { font-stretch:ultra-condensed; font-family:Sans-Serif; font-size:72px;}
+.index-main { text-align:center; padding:60px; }
+.toc ul li { font-size:10px; line-height:10px; margin-top: 0px; }
+.toc ul li a { color:#000000;}
+
+.index-header { text-align:center; top:0px; padding:60px;
+
+    background: #a9db80; /* Old browsers */
+    background: -moz-linear-gradient(top,  #a9db80 15%, #96c56f 89%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(15%,#a9db80), color-stop(89%,#96c56f)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #a9db80 15%,#96c56f 89%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #a9db80 15%,#96c56f 89%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #a9db80 15%,#96c56f 89%); /* IE10+ */
+    background: linear-gradient(to bottom,  #a9db80 15%,#96c56f 89%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a9db80', endColorstr='#96c56f',GradientType=0 ); /* IE6-9 */
+
 }
-DIV.section h2
-{
-    margin-top:30px;
-    text-align:center;
-    font-family:"Helvetica";
-    font-size:14px;
-    font-weight: bold;
-}
-DIV.subsection h3
-{
-    font-size:12px;
-    font-weight: bold;
-}
-/*
-  DIV.subsection
-{
-    font-family:"Times New Roman";
-    font-size:14px;
-    margin-top:10px;
-    text-align:justify;
-}
-DIV.subsubsection
-{
-    font-family:"Times New Roman";
-    font-size:14px;
-    margin-top:10px;
-    text-align:justify;
-    margin-left:15px;
-}
-DIV.subsubsubsection
-{
-    font-family:"Times New Roman";
-    font-size:14px;
-    margin-top:10px;
-    text-align:justify;
-    margin-left:30px;
-}
-.text
-{
-    font-family:"Times New Roman";
-    font-size:14px;
-    margin-top:10px;
-    text-align:justify;
-}
-    */
-.title
-{
-    font-weight:bold;
-}
-/*
-DIV.chapter
-{
-    width:360px;
-}
-    */
+
+
