--- a/views/admin.tt
+++ b/views/admin.tt
@@ -23,10 +23,9 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="span12">
-            <br>
             [% content %]
             </div>
         </div>
