--- a/views/edit.tt
+++ b/views/edit.tt
@@ -1,5 +1,4 @@
 [% WRAPPER 'admin.tt' %]
-<form class="form-horizontal" method="post">
 <ul class="breadcrumb">
     <li><a href="../admin">Admin</a> <span class="divider">></span></li>
 [% IF chapterNum %]
@@ -9,19 +8,24 @@
     <li><a href="../view/[% filename %]">[% title %]</a></li>
 [% END %]
 </ul>
-</div><div class="span8">
+</div>
+</div>
+<div class="row-fluid">
+<div class="span8">
+<form class="form-horizontal" method="post">
 <h1>[% title %]</h1>
 [% IF chapterNum %]<h2>Chapter [% chapterNum %]</h2>[% END %]
 
-<textarea name="content" id="content" rows="10" style="width:600px">[% content %]</textarea>
+<textarea name="content" id="content" rows="20" class="span12">[% content %]</textarea>
 <p><p>
 <button type="submit" class="btn btn-primary">Save</button>
 <a href="../admin" class="btn btn-small">Cancel</a>
 <a href="delete/[% filename %]" class="btn btn-small btn-danger">Delete</a>
+<a href="#" onclick="clean();">Clean</a>
 </form>
 <p><p>
 <h2>Preview</h2>
-<div class="span6 well" style="height:300px;overflow:scroll;">[% content %]</div>
+<div class="span12 well" style="height:600px;overflow:scroll;">[% content %]</div>
 </div>
 <div class="span4">
 <div class="well">
