--- a/views/index.tt
+++ b/views/index.tt
@@ -1,9 +1,17 @@
-<div class="row">
-    <div class="span5 offset3">
-    <form action="/" method="get">
-    <input type="text" placeholder="Search" name="q">
-    <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <br>
+<div class="container-fluid index-header">
+<h1>Open Building Codes</h1><br>
+<i class="icon-search"></i>
+</div>
+<div class="container-fluid index-main">
+    <div class="row-fluid">
+        <div class="span12">
+            <form action="/" method="get">
+                <div class="input-append">
+                <input type="text" placeholder="Search" name="q">
+                <button type="submit" class="btn btn-primary">Search</button>
+                </div>
+            </form>
+            <br>
+        </div>
     </div>
 </div>
