--- a/views/search.tt
+++ b/views/search.tt
@@ -1,20 +1,13 @@
-<div class="row">
-    <div class="span5 offset3">
-    <form action='/' method='get'>
-    <input type="text" value="[% query %]" name="q">
-    <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <br>
-    </div>
+[% PROCESS searchbar.tt %]
+
 </div>
 <div class="row">
     <div class="span2">
-    Options
+<br>
     </div>
     <div class="span6">
-    <br>
 [% FOREACH res IN results %]
-    <a href="view/[% res.codeurl %]#[% res.id %]"><b>[% res.name %]</b></a> <br>
+    <a href="view/[% res.codeurl %]#[% res.id %]"><b>[% res.id %] [% res.name %]</b></a> <br>
     [% res.hl %]<br><br>
 [% END %]
     </div>
